--- a/css/style.css
+++ b/css/style.css
@@ -197,16 +197,18 @@ li {
     position: relative;
     width: 100%;
     height: 60rem;
+    overflow-y: hidden;
 }
 .mySwiper-1 {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 /* Cada Slide */
 .swiper-slide {
     position: relative;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
