Renderizando imagenes y codigo

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -459,4 +459,9 @@
         width: 10rem;
         opacity: .7;
     }
+
+    .hero {
+        height: min(100vh, 60rem);
+        overflow: hidden;
+    }
 }
