--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,8 @@ li {
 .hero {
     position: relative;
     width: 100%;
-    height: 60rem;
+    max-height: 60rem;
+    height: 100dvh;
     overflow-y: hidden;
 }
 .mySwiper-1 {
